[FIXED] splash screen css overlapping next page issue

--- a/src/stylesheets/sass/SplashScreen.scss
+++ b/src/stylesheets/sass/SplashScreen.scss
@@ -1,5 +1,12 @@
 .bg-container {
     height: 100vh;
+    width: 100vw;
+    background-image: url('../assets/lolohgod.jpg') ;
+    background-position: left center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size:  cover;
+    background-color: #999;
 }
 
 .overlay {
